gcc/testsuite/g++.dg/parse/struct-5.C
// PR c++/55368

struct A { struct B *C,; };  // { dg-error "stray" }
